--- a/static/pug/blocks/projects/projects.pug
+++ b/static/pug/blocks/projects/projects.pug
@@ -20,74 +20,74 @@ mixin projects
 			.projects__list.cards
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-1.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем электропитания на базе топливных элементов
 					p.cards__text LEXX Technology – инжиниринговая корпорация стоящая во главе электротехнического холдинга. Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом и продажей электрооборудования.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-2.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем накопления и хранения энергии
 					p.cards__text Системы автоматизации технологического оборудования и процессов, системы накопления и хранения энергии, систем электропитания на базе топливных элементов.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-3.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Системы гарантированного электроснабжения
 					p.cards__text Системы экономии электроэнергии, системы стабилизации, системы оперативного постоянного тока, системы гарантированного электроснабжения удалённых объектов и источников бесперебойного питания.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-1.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем электропитания на базе топливных элементов
 					p.cards__text LEXX Technology – инжиниринговая корпорация стоящая во главе электротехнического холдинга. Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом и продажей электрооборудования.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-2.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем накопления и хранения энергии
 					p.cards__text Системы автоматизации технологического оборудования и процессов, системы накопления и хранения энергии, систем электропитания на базе топливных элементов.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-3.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Системы гарантированного электроснабжения
 					p.cards__text Системы экономии электроэнергии, системы стабилизации, системы оперативного постоянного тока, системы гарантированного электроснабжения удалённых объектов и источников бесперебойного питания.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-1.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем электропитания на базе топливных элементов
 					p.cards__text LEXX Technology – инжиниринговая корпорация стоящая во главе электротехнического холдинга. Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом и продажей электрооборудования.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-2.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Систем накопления и хранения энергии
 					p.cards__text Системы автоматизации технологического оборудования и процессов, системы накопления и хранения энергии, систем электропитания на базе топливных элементов.
 				.cards__item
 					.cards__over-img
-						a(href="#", data-popup="one-news").cards__over-link.js-open-popup
+						a(href="#", data-popup="projects").cards__over-link.js-open-popup
 						img(src="./img/news/img-3.jpg", alt="").cards__over-pic
 					data.cards__data 12/07/2019
-					a(href="#", data-popup="one-news").cards__link.js-open-popup
+					a(href="#", data-popup="projects").cards__link.js-open-popup
 						span Системы гарантированного электроснабжения
 					p.cards__text Системы экономии электроэнергии, системы стабилизации, системы оперативного постоянного тока, системы гарантированного электроснабжения удалённых объектов и источников бесперебойного питания.
 
