--- a/static/pug/blocks/standart/hidden-blocks.pug
+++ b/static/pug/blocks/standart/hidden-blocks.pug
@@ -50,3 +50,28 @@ mixin hidden-blocks
 				form(action="").js-validate
 					input(type="text", data-req="req", placeholder="Поиск по сайту").search__input
 					button(type="submit").search__btn Поиск
+
+		.popup#projects
+			button(type="button").popup__close.js-close-popup Закрыть
+			.project-popup.wis-content
+				h2 Очень-очень большой заголовок новости
+				data.news-popup__data 12/07/2019
+				p Компания была создана 5 июня 2019 года в Екатеринбурге. В нее сейчас входит дочерняя компания «Континент» которая на 100% принадлежит компании LEXX TECHNOLOGY CORP. Компания никогда не была банкротом и не участвовала в разбирательствах по слиянию или поглощению.
+				p Непосредственно и через наши дочерние компании мы занимаемся производственным бизнесом, инжинирингом и продажей электрооборудования, в частности: систем экономии электроэнергии, системы стабилизации, систем оперативного постоянного тока, систем гарантированного электроснабжения удалённых объектов и источников бесперебойного питания, строительством центров обработки данных, разработкой решений в области электроснабжения, АСУТП, цифровым производством.
+				p Также, в компанию LEXX TECHNOLOGY CORP входит АО «Инфосеть». Данная компания целиком и полностью осуществляет функции реализации проектов по строительству и дальнейшему обслуживанию стационарных Центров Обработки Данных. 
+				.project-popup__slider
+					.swiper-container.js-projects-popup-slider
+						.swiper-wrapper
+							.swiper-slide
+								img(src="./img/icatalog-img.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/products-image.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/video-poster.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/default-img.jpg", alt="").project-popup__slider-img
+						.swiper-navigation
+							.swiper-button-prev
+							.swiper-button-next
+				p Компания планирует рост продаж путем расширения производства для выполнения контрактных обязательств крупнейших российских корпораций, дальнейшего развития филиальной сети в России, выхода на рынок СНГ, Европы, Ближнего Востока, Соединенных Штатов, Стран Латинской Америки. Компания стремится быть эксклюзивным представителем крупнейших Европейских и Американских компаний в своей отрасли на российском рынке.
+				button(type="button").news-popup__btn.btn.js-close-popup Закрыть
