--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -250,6 +250,7 @@
 			background-color: $dark-blue
 			margin-left: -20px
 			color: $white
+			border-radius: 0
 
 			@include mob
 				margin-left: -10px
