--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -2392,7 +2392,8 @@ h1 {
       border: none;
       background-color: #024492;
       margin-left: -20px;
-      color: #ffffff; }
+      color: #ffffff;
+      border-radius: 0; }
       .header__language .choices__list--dropdown .choices__list {
         padding: 30px 20px; }
       .header__language .choices__list--dropdown .choices__item--selectable.is-highlighted {
@@ -3069,6 +3070,20 @@ h1 {
     .subnav__link:hover {
       border-color: transparent; }
 
+.hidden-blocks {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  padding: 100px 0;
+  visibility: hidden; }
+  .hidden-blocks.active {
+    visibility: visible; }
+
 .popup-bg {
   background-color: #034ea2;
   position: fixed;
@@ -3076,13 +3091,9 @@ h1 {
   bottom: 0;
   width: 100%;
   height: 0;
-  z-index: 100;
+  z-index: 10;
   visibility: hidden;
   opacity: 0;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
   -webkit-transition: .5s height, .05s opacity, .05s visibility;
   transition: .5s height, .05s opacity, .05s visibility; }
   .popup-bg.active {
@@ -3104,7 +3115,8 @@ h1 {
   opacity: 0;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  will-change: opacity; }
+  will-change: opacity;
+  margin-bottom: 214px; }
   .popup--w510 {
     width: 510px; }
   .popup--w600 {
@@ -3259,7 +3271,8 @@ h1 {
   background-image: none;
   margin: 0;
   right: 0;
-  left: 0; }
+  left: 0;
+  top: 0; }
   .project-popup .swiper-button-next:hover:before {
     left: calc(50% + 5px); }
   .project-popup .swiper-button-next:before {
@@ -3285,7 +3298,8 @@ h1 {
   background-image: none;
   margin: 0;
   right: 0;
-  left: 0; }
+  left: 0;
+  top: 0; }
   .project-popup .swiper-button-prev:hover:before {
     left: calc(50% - 5px); }
   .project-popup .swiper-button-prev:before {
@@ -4619,7 +4633,7 @@ h1 {
         line-height: 20px;
         font-size: 15px; }
     .popup {
-      top: 195px; }
+      top: 150px; }
     .news-popup__data {
       line-height: 17px;
       font-size: 13px; }
@@ -4801,7 +4815,8 @@ h1 {
       .projects__text {
         max-width: 960px; }
       .projects__map {
-        left: calc(-1*(100vw - 100%)/2); } }
+        left: calc(-1*(100vw - 100%)/2);
+        height: 450px; } }
     @media only screen and (max-width: 1340px) {
       .products__item:hover .products__hover-img {
         width: calc(100% + 200px);
@@ -5020,7 +5035,8 @@ h1 {
           margin-bottom: 0; }
     .popup {
       width: 95%;
-      padding: 50px 20px; }
+      padding: 50px 20px;
+      top: 50px; }
       .popup__close {
         -webkit-filter: brightness(100%) invert(0);
                 filter: brightness(100%) invert(0);
