--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -37,6 +37,14 @@
 			width: 100%
 			margin-right: 0
 			margin-bottom: 40px
+
+			&:nth-last-child(1),
+			&:nth-last-child(2),
+			&:nth-last-child(3)
+				margin-bottom: 40px
+
+			&:last-child
+				margin-bottom: 0
 	
 	&__over-img
 		position: relative
