Заменил толстые картинки на странице проектов

--- a/static/pug/blocks/standart/hidden-blocks.pug
+++ b/static/pug/blocks/standart/hidden-blocks.pug
@@ -63,13 +63,15 @@ mixin hidden-blocks
 					.swiper-container.js-projects-popup-slider
 						.swiper-wrapper
 							.swiper-slide
-								img(src="./img/icatalog-img.jpg", alt="").project-popup__slider-img
-							.swiper-slide
 								img(src="./img/products-image.jpg", alt="").project-popup__slider-img
 							.swiper-slide
-								img(src="./img/video-poster.jpg", alt="").project-popup__slider-img
-							.swiper-slide
 								img(src="./img/default-img.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/news/img-1.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/news/img-2.jpg", alt="").project-popup__slider-img
+							.swiper-slide
+								img(src="./img/news/img-3.jpg", alt="").project-popup__slider-img
 						.swiper-navigation
 							.swiper-button-prev
 							.swiper-button-next
