--- a/static/pug/blocks/prod-card/prod-card.pug
+++ b/static/pug/blocks/prod-card/prod-card.pug
@@ -22,7 +22,7 @@ mixin prod-card
 					| питания PowerSpot
 			.prod-card__container
 				.prod-card__column
-					.prod-card__info
+					.prod-card__info.wis-content
 						p Первые шаги в разработке бесперебойного источника питания (ИБП) команда начала ещё в в 2012 году и сегодня данное устройство является одним из наиболее перспективных систем бесперебойного электропитания, основанных на современной PWM-бестрансформаторной технологии, которые легко приспосабливаются к самым разнообразным и сложным нагрузкам: нелинейные устройства (IT-системы), большие индуктивные или ёмкостные нагрузки, газоразрядные лампы, асинхронные двигатели и т.д.
 					.lightgallery
 						a(href="https://www.youtube.com/watch?v=_7pmUPMcOYk").prod-card__video Видео о продукте
