--- a/static/sass/blocks/contacts/contacts.sass
+++ b/static/sass/blocks/contacts/contacts.sass
@@ -16,7 +16,7 @@
 		margin: 0 auto
 		margin-bottom: 32px
 
-		@include pad
+		@include mob
 			columns: 1
 
 	&__item
@@ -34,7 +34,7 @@
 
 		@include desktop
 			font-size: 13px / 17px
-	
+
 	&__adress,
 	&__time
 		font-size: 18px
