--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -45,6 +45,7 @@
 		margin-bottom: 34px
 
 		text-transform: none
+		text-align: left
 
 		color: $black
 
@@ -250,8 +251,8 @@
 		.wrapper
 			max-width: 1026px
 		h1
-			font-size: 56px
-			line-height: 60px
+			font-size: 46px
+			line-height: 50px
 
 		h2
 			font-size: 42px
@@ -277,8 +278,6 @@
 				line-height: 23px
 
 		figcaption
-			margin-bottom: 22px
-
 			font-size: 17px
 			line-height: 23px
 
@@ -326,9 +325,9 @@
 			line-height: 26px
 
 		h3
-			font-size: 22px
+			font-size: 20px
 			line-height: 24px
 
 		h4
-			font-size: 20px
+			font-size: 18px
 			line-height: 22px
