--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -2846,6 +2846,7 @@ h1 {
 .wis-content h1 {
   margin-bottom: 34px;
   text-transform: none;
+  text-align: left;
   color: #000000;
   font-size: 64px;
   font-weight: 700;
@@ -3965,9 +3966,9 @@ h1 {
       transition: .5s filter; }
   .prod-card__overimg {
     width: 100%;
-    height: 720px;
     background-color: #fcfcfc;
-    position: relative; }
+    position: relative;
+    padding-top: 123%; }
   .prod-card__img {
     max-width: 100%;
     position: absolute;
@@ -4558,8 +4559,8 @@ h1 {
   .wis-content .wrapper {
     max-width: 1026px; }
   .wis-content h1 {
-    font-size: 56px;
-    line-height: 60px; }
+    font-size: 46px;
+    line-height: 50px; }
   .wis-content h2 {
     font-size: 42px;
     line-height: 46px;
@@ -4579,7 +4580,6 @@ h1 {
       font-size: 17px;
       line-height: 23px; }
   .wis-content figcaption {
-    margin-bottom: 22px;
     font-size: 17px;
     line-height: 23px; }
   .wis-content figure + p {
@@ -4756,8 +4756,6 @@ h1 {
       .prod-card__video {
         font-size: 17px;
         line-height: 24px; }
-      .prod-card__overimg {
-        height: 627px; }
       .search .wrapper {
         max-width: 1025px; }
       .search__warn {
@@ -4954,6 +4952,8 @@ h1 {
         font-weight: 400; }
         .header__btn:before {
           content: none; }
+        .header__btn--search {
+          margin-bottom: 18px; }
       .header__bottom {
         -webkit-box-pack: end;
             -ms-flex-pack: end;
@@ -5015,6 +5015,8 @@ h1 {
       margin-top: 24px; }
       .cards__item {
         width: calc(100% / 2 - 32px); }
+        .cards__item:nth-last-child(3) {
+          margin-bottom: 98px; }
       .cards__over-pic {
         height: 280px; }
     .breadcrumbs {
@@ -5056,12 +5058,11 @@ h1 {
       margin-top: -87px; }
       .hero__slide {
         height: 100vh; }
+      .prod-card__overimg {
+        height: 627px;
+        padding-top: 0; }
     .contacts__map {
       height: 300px; }
-    .contacts__info {
-      -webkit-columns: 1;
-         -moz-columns: 1;
-              columns: 1; }
     .contacts__form-column {
       margin-right: 0;
       width: 100%;
@@ -5073,9 +5074,6 @@ h1 {
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
               flex-direction: column; }
-      .certificates__item {
-        width: 100%;
-        margin-right: 0 !important; }
       .certificates__btn {
         width: 250px; }
       .news__btn {
@@ -5104,8 +5102,6 @@ h1 {
     @media only screen and (max-width: 767px) {
     .wrapper {
       padding: 0 15px; }
-        .header__btn--search {
-          margin-bottom: 18px; }
       .header__language {
         display: none; }
         .header__language--mobile {
@@ -5198,7 +5194,14 @@ h1 {
       margin-right: 0 !important;
       padding: 35px 29px; }
       .search__more {
-        min-width: 266px; } }
+        min-width: 266px; }
+    .contacts__info {
+      -webkit-columns: 1;
+         -moz-columns: 1;
+              columns: 1; }
+      .certificates__item {
+        width: 100%;
+        margin-right: 0 !important; } }
     @media only screen and (max-width: 520px) {
       .inews__header {
         -webkit-box-orient: vertical;
@@ -5223,10 +5226,10 @@ h1 {
     font-size: 24px;
     line-height: 26px; }
   .wis-content h3 {
-    font-size: 22px;
+    font-size: 20px;
     line-height: 24px; }
   .wis-content h4 {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 22px; }
     .not-found__title {
       font-size: 26px;
