--- a/static/sass/blocks/prod-card/prod-card.sass
+++ b/static/sass/blocks/prod-card/prod-card.sass
@@ -80,12 +80,14 @@
 
 	&__overimg
 		width: 100%
-		height: 720px
+		// height: 660px
 		background-color: #fcfcfc
 		position: relative
+		padding-top: 123%
 
-		@include desktop
+		@include pad
 			height: 627px
+			padding-top: 0
 
 	&__img
 			max-width: 100%
