--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -32,6 +32,9 @@
 		
 		@include pad
 			width: calc(100% / 2 - 32px)
+
+			&:nth-last-child(3)
+				margin-bottom: 98px
 		
 		@include mob
 			width: 100%
