--- a/static/pug/blocks/projects/projects.pug
+++ b/static/pug/blocks/projects/projects.pug
@@ -9,6 +9,14 @@ mixin projects
 						span.breadcrumbs__line /
 					li.breadcrumbs__item
 						span.breadcrumbs__link Реализованные проекты
+					li.breadcrumbs__item
+						span.breadcrumbs__line /
+					li.breadcrumbs__item
+						span.breadcrumbs__link Реализованные проекты123
+					li.breadcrumbs__item
+						span.breadcrumbs__line /
+					li.breadcrumbs__item
+						span.breadcrumbs__link Завершен весь комплекс работ по строительству стадиона в п. Бреды Челябинской области
 				h1 Реализованные проекты
 			
 			.projects__map#yaMap
