--- a/static/sass/blocks/standart/breadcrumbs.sass
+++ b/static/sass/blocks/standart/breadcrumbs.sass
@@ -1,5 +1,4 @@
 .breadcrumbs
-	display: flex
 	margin-bottom: 13px
 
 	@include desktop
@@ -7,6 +6,9 @@
 	
 	@include pad
 		display: none
+	
+	&__item
+		display: inline
 
 	&__link
 		color: #b0b0b0
@@ -15,6 +17,7 @@
 		font-weight: normal
 		border-bottom: 1px solid #b0b0b0
 		transition: .5s border-color
+		display: inline
 
 		@include desktop
 			font-size: 14px
@@ -33,7 +36,6 @@
 		font-size: 15px
 		line-height: 21px
 		font-weight: normal
-		display: inline-block
 		margin: 0 12px
 
 		@include desktop
