--- a/static/sass/blocks/standart/cards.sass
+++ b/static/sass/blocks/standart/cards.sass
@@ -90,6 +90,9 @@
 		@include desktop
 			font-size: 13px
 			line-height: 17px
+	span.cards__link
+		span
+			border: none
 
 	&__link
 		display: inline-block
