--- a/static/sass/blocks/prod-category/prod-category.sass
+++ b/static/sass/blocks/prod-category/prod-category.sass
@@ -9,7 +9,6 @@
 		margin-right: 36px
 		margin-bottom: 36px
 		padding: 50px 48px
-		padding-top: 0
 		position: relative
 
 		@include desktop
@@ -56,13 +55,15 @@
 
 	&__over-img
 		position: relative
-		height: 494px
+		height: 420px
+		margin-bottom: 20px
 
 		@include desktop
-			height: 451px
+			height: 380px
 
 	&__img
 		max-width: 100%
+		max-height: 100%
 		object-fit: cover
 		font-family: 'object-fit: cover;'
 		position: absolute
