--- a/static/sass/blocks/contacts/contacts.sass
+++ b/static/sass/blocks/contacts/contacts.sass
@@ -99,6 +99,14 @@
 		text-align: center
 		margin-bottom: 43px
 
+		a
+			color: $main-blue
+			border-bottom: 1px solid $main-blue
+			transition: .5s border-color
+
+			&:hover
+				border-color: $t
+
 		@include desktop
 			font-size: 14px / 20px
 			margin-bottom: 20px
