--- a/static/sass/blocks/projects/projects.sass
+++ b/static/sass/blocks/projects/projects.sass
@@ -11,6 +11,7 @@
 		max-width: 1100px
 		margin: 0 auto
 		padding: 65px 0
+		margin-bottom: 100px
 
 		@include desktop
 			max-width: 960px
@@ -47,9 +48,6 @@
 		@include desktop
 			left: calc(-1*(100vw - 100%)/2)
 			height: 450px
-		
-		@include pad
-			display: none
 
 		.cluster-number
 			font-family: 'Gotham Pro'
