--- a/static/sass/blocks/standart/popup.sass
+++ b/static/sass/blocks/standart/popup.sass
@@ -147,6 +147,15 @@
 		line-height: 21px
 		color: $black
 		margin-bottom: 20px
+
+		a
+			color: $main-blue
+			border-bottom: 1px solid $main-blue
+			-webkit-transition: .5s border-color
+			transition: .5s border-color
+
+			&:hover
+				border-color: $t
 	
 	&__warn
 		color: $black
