--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -2260,19 +2260,22 @@ h1 {
   position: relative;
   z-index: 3; }
   .header__top {
-    padding: 0 33px;
-    height: 50px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    background-color: #034ea2;
-    z-index: 1; }
+    height: 50px; }
+    .header__top-container {
+      padding: 0 33px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between;
+      background-color: #034ea2;
+      z-index: 1;
+      padding-right: 32px;
+      padding-left: 29px; }
   .header__btns {
     display: inline-block;
     font-size: 0;
@@ -2607,6 +2610,8 @@ h1 {
     color: #000000;
     display: inline-block;
     margin-bottom: 2px; }
+  .footer__emails {
+    margin-bottom: 20px; }
   .footer__emails-link {
     color: #034ea2;
     font-size: 15px;
@@ -3198,6 +3203,13 @@ h1 {
   line-height: 21px;
   color: #000000;
   margin-bottom: 20px; }
+  .form-popup__text a {
+    color: #034ea2;
+    border-bottom: 1px solid #034ea2;
+    -webkit-transition: .5s border-color;
+    transition: .5s border-color; }
+    .form-popup__text a:hover {
+      border-color: transparent; }
 
 .form-popup__warn {
   color: #000000;
@@ -4413,7 +4425,8 @@ h1 {
     position: relative;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 65px 0; }
+    padding: 65px 0;
+    margin-bottom: 100px; }
     .projects__text:before {
       content: '';
       position: absolute;
@@ -4496,9 +4509,7 @@ h1 {
       font-size: 17px;
       line-height: 24px; }
       .header__top {
-        height: 48px;
-        padding-right: 32px;
-        padding-left: 29px; }
+        height: 48px; }
       .header__btn {
         width: 48px;
         height: 48px; }
@@ -4925,22 +4936,31 @@ h1 {
         top: 0;
         right: 0;
         bottom: 0;
-        padding: 60px 20px;
-        padding-bottom: 100px;
+        padding: 0 20px;
         width: 100vw;
         height: 100vh;
-        -webkit-box-align: center;
-            -ms-flex-align: center;
-                align-items: center;
-        -webkit-box-pack: center;
-            -ms-flex-pack: center;
-                justify-content: center;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        background-color: #034ea2;
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
-                flex-direction: column;
-        overflow-y: auto;
-        overflow-x: hidden; }
+                flex-direction: column; }
+        .header__top-container {
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          margin: 0 auto;
+          padding: 100px 0;
+          -ms-flex-negative: 0;
+              flex-shrink: 0; }
       .header__btns {
         display: -webkit-box;
         display: -ms-flexbox;
@@ -5086,9 +5106,7 @@ h1 {
       .news__btn {
         width: 250px; }
       .projects__btn {
-        width: 250px; }
-      .projects__map {
-        display: none; } }
+        width: 250px; } }
     @media only screen and (max-width: 900px) {
   .developers__href {
     padding-left: 85px; }
@@ -5109,6 +5127,9 @@ h1 {
     @media only screen and (max-width: 767px) {
     .wrapper {
       padding: 0 15px; }
+      .header__bottom {
+        padding-left: 15px;
+        padding-right: 15px; }
       .header__language {
         display: none; }
         .header__language--mobile {
@@ -5119,8 +5140,7 @@ h1 {
           -webkit-box-direction: normal;
               -ms-flex-direction: column;
                   flex-direction: column;
-          margin-bottom: 30px;
-          margin-top: 120px; }
+          margin-bottom: 30px; }
         .header__language span {
           font-size: 22px;
           font-weight: 400;
