--- a/static/sass/blocks/standart/header.sass
+++ b/static/sass/blocks/standart/header.sass
@@ -3,19 +3,11 @@
 	z-index: 3
 
 	&__top
-		padding: 0 33px
 		height: 50px
-		display: flex
-		align-items: center
-		justify-content: space-between
-		background-color: $main-blue
-		z-index: 1
 
 		@include desktop
 			height: 48px
-			padding-right: 32px
-			padding-left: 29px
-		
+
 		@include pad
 			display: none
 			position: absolute
@@ -23,15 +15,33 @@
 			top: 0
 			right: 0
 			bottom: 0
-			padding: 60px 20px
-			padding-bottom: 100px
+			// padding: 60px 20px
+			// padding-bottom: 100px
+			padding: 0 20px
 			width: 100vw
 			height: 100vh
-			align-items: center
-			justify-content: center
-			flex-direction: column
-			overflow-y: auto
+			overflow-y: scroll
 			overflow-x: hidden
+			background-color: $main-blue
+			flex-direction: column
+
+		&-container
+			padding: 0 33px
+			display: flex
+			align-items: center
+			justify-content: space-between
+			background-color: $main-blue
+			z-index: 1
+			padding-right: 32px
+			padding-left: 29px
+
+			@include pad
+				align-items: center
+				justify-content: center
+				flex-direction: column
+				margin: 0 auto
+				padding: 100px 0
+				flex-shrink: 0
 
 	&__btns
 		display: inline-block
@@ -134,6 +144,10 @@
 		
 		@include pad
 			justify-content: flex-end
+		
+		@include mob
+			padding-left: 15px
+			padding-right: 15px
 
 	&__info
 		display: flex
@@ -167,7 +181,6 @@
 				display: flex
 				flex-direction: column
 				margin-bottom: 30px
-				margin-top: 120px
 
 		span
 			font-size: 16px
