fix figure tag styles

--- a/static/sass/blocks/standart/default.sass
+++ b/static/sass/blocks/standart/default.sass
@@ -39,7 +39,9 @@
 	figure
 		margin: 0
 		margin-bottom: 18px
-		display: inline-block
+		display: flex
+		flex-wrap: wrap
+		justify-content: space-between
 
 	h1
 		margin-bottom: 34px
@@ -182,9 +184,6 @@
 		height: auto
 		max-height: 100%
 		margin-bottom: 32px
-
-		&:last-child
-			margin-bottom: 0
 
 	figcaption
 		margin-top: -20px
