--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -2848,7 +2848,14 @@ h1 {
 .wis-content figure {
   margin: 0;
   margin-bottom: 18px;
-  display: inline-block; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .wis-content h1 {
   margin-bottom: 34px;
@@ -2953,8 +2960,6 @@ h1 {
   height: auto;
   max-height: 100%;
   margin-bottom: 32px; }
-  .wis-content img:not([class]):last-child {
-    margin-bottom: 0; }
 
 .wis-content figcaption {
   margin-top: -20px;
