--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -3779,20 +3779,29 @@ h1 {
       -ms-flex-align: start;
           align-items: flex-start;
   margin-bottom: 36px;
-  z-index: 2; }
+  z-index: 2;
+  overflow: hidden; }
   .products__item:nth-child(odd) {
     margin-right: 36px; }
   .products__item:nth-child(even) .products__hover-img {
     right: auto;
     left: 0; }
-  .products__item:hover .products__name span {
-    border-color: transparent; }
-  .products__item:hover .products__hover-img {
-    width: calc(100% + 250px);
-    height: calc(100% + 184px);
-    -webkit-transition: .8s width, .8s height;
-    transition: .8s width, .8s height;
-    opacity: 1; }
+  .products__item:nth-child(even) .products__bg:before {
+    right: auto;
+    left: 0; }
+  .products__item:hover {
+    overflow: visible; }
+    .products__item:hover .products__name span {
+      border-color: transparent; }
+    .products__item:hover .products__bg {
+      opacity: 1; }
+      .products__item:hover .products__bg:before {
+        width: 100%;
+        height: 100%; }
+    .products__item:hover .products__hover-img {
+      width: calc(100% + 250px);
+      height: calc(100% + 184px);
+      opacity: 1; }
 
 .products__name {
   max-height: 155px;
@@ -3821,8 +3830,6 @@ h1 {
   height: 100%;
   z-index: -2;
   opacity: 0;
-  -webkit-transition: .3s width, .3s height, .6s opacity;
-  transition: .3s width, .3s height, .6s opacity;
   -o-object-fit: cover;
      object-fit: cover;
   font-family: 'object-fit: cover;'; }
@@ -3835,7 +3842,18 @@ h1 {
   position: absolute;
   left: 0;
   top: 0;
-  z-index: -1; }
+  z-index: -1;
+  opacity: 0; }
+  .products__bg:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: calc(100% + 250px);
+    height: calc(100% + 184px);
+    background-color: #034ea2;
+    -webkit-transition: 1s width, 1s height;
+    transition: 1s width, 1s height; }
 
 .prod-category__list {
   display: -webkit-box;
@@ -4839,13 +4857,13 @@ h1 {
         left: calc(-1*(100vw - 100%)/2);
         height: 450px; } }
     @media only screen and (max-width: 1340px) {
-      .products__item:hover .products__hover-img {
-        width: calc(100% + 200px);
-        height: calc(100% + 124px); } }
+        .products__item:hover .products__hover-img {
+          width: calc(100% + 200px);
+          height: calc(100% + 124px); } }
     @media only screen and (max-width: 1290px) {
-      .products__item:hover .products__hover-img {
-        width: calc(100% + 130px);
-        height: calc(100% + 60px); } }
+        .products__item:hover .products__hover-img {
+          width: calc(100% + 130px);
+          height: calc(100% + 60px); } }
     @media only screen and (max-width: 1170px) {
     .nav__item {
       margin-right: 10px; }
@@ -4910,8 +4928,8 @@ h1 {
         margin-bottom: 36px; }
         .icatalog__slide:nth-child(odd) {
           margin-right: 36px; }
-      .products__item:hover .products__hover-img {
-        display: none; }
+        .products__item:hover .products__hover-img {
+          display: none; }
     .prod-category__item {
       width: calc(100% / 2 - 16px);
       margin-right: 32px; }
