--- a/static/sass/blocks/products/products.sass
+++ b/static/sass/blocks/products/products.sass
@@ -21,6 +21,7 @@
 		align-items: flex-start
 		margin-bottom: 36px
 		z-index: 2
+		overflow: hidden
 
 		@include desktop
 			padding: 37px 47px
@@ -43,15 +44,27 @@
 				right: auto
 				left: 0
 
+			.products__bg
+				&:before
+					right: auto
+					left: 0
+
 		&:hover
+			overflow: visible
 			.products__name
 				span
 					border-color: $t
 			
+			.products__bg
+				opacity: 1
+				&:before
+					width: 100%
+					height: 100%
+
 			.products__hover-img
 				width: calc(100% + 250px)
 				height: calc(100% + 184px)
-				transition: .8s width, .8s height
+				// transition: .8s width, .8s height
 				opacity: 1
 
 				@media only screen and (max-width: 1340px)
@@ -95,7 +108,7 @@
 		height: 100%
 		z-index: -2
 		opacity: 0
-		transition: .3s width, .3s height, .6s opacity
+		// transition: .3s width, .3s height
 		object-fit: cover
 		font-family: 'object-fit: cover;'
 
@@ -108,3 +121,14 @@
 		left: 0
 		top: 0
 		z-index: -1
+		opacity: 0
+
+		&:before
+			content: ''
+			position: absolute
+			bottom: 0
+			right: 0
+			width: calc(100% + 250px)
+			height: calc(100% + 184px)
+			background-color: $main-blue
+			transition: 1s width, 1s height
