--- a/static/sass/blocks/standart/popup.sass
+++ b/static/sass/blocks/standart/popup.sass
@@ -34,8 +34,8 @@
 .popup
 	position: absolute
 	left: 50%
-	transform: translateX(-50%)
-	top: 214px
+	transform: translate(-50%, -50%)
+	top: 50%
 	width: 960px
 	background-color: $white
 	z-index: 101
@@ -74,9 +74,6 @@
 	&.active
 		opacity: 1
 
-	@include desktop
-		top: 150px
-
 	@media only screen and (max-width: 1170px)
 		width: 85%
 	
@@ -84,6 +81,7 @@
 		width: 95%
 		padding: 50px 20px
 		top: 50px
+		transform: translate(-50%, 0)
 
 	&__close
 		size: 28px 28px
