fix popup position

--- a/public/static/css/styles.css
+++ b/public/static/css/styles.css
@@ -2256,6 +2256,12 @@ h1 {
   .warning-text.active {
     display: block; }
 
+.popup-show {
+  overflow: hidden; }
+
+.no-touchevents .popup-show {
+  padding-right: 17px; }
+
 .header {
   position: relative;
   z-index: 3; }
@@ -3083,18 +3089,27 @@ h1 {
       border-color: transparent; }
 
 .hidden-blocks {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
-  overflow-y: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  padding: 100px 0;
-  visibility: hidden; }
-  .hidden-blocks.active {
-    visibility: visible; }
+  height: 0; }
+  .hidden-blocks.active .hidden-blocks__over {
+    overflow-y: scroll;
+    z-index: 1000; }
+  .hidden-blocks__over {
+    padding: 90px 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    overflow: hidden;
+    text-align: center;
+    z-index: -1; }
+    .hidden-blocks__over:before {
+      content: "";
+      display: inline-block;
+      font-size: 0;
+      height: 100%;
+      vertical-align: middle;
+      width: 0; }
 
 .popup-bg {
   background-color: #034ea2;
@@ -3114,11 +3129,10 @@ h1 {
     opacity: 1; }
 
 .popup {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  top: 50%;
+  text-align: left;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
   width: 960px;
   background-color: #ffffff;
   z-index: 101;
@@ -3127,8 +3141,7 @@ h1 {
   opacity: 0;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  will-change: opacity;
-  margin-bottom: 214px; }
+  will-change: opacity; }
   .popup--w510 {
     width: 510px; }
   .popup--w600 {
@@ -4448,8 +4461,7 @@ h1 {
     position: relative;
     max-width: 1100px;
     margin: 0 auto;
-    padding: 65px 0;
-    margin-bottom: 100px; }
+    padding: 65px 0; }
     .projects__text:before {
       content: '';
       position: absolute;
@@ -5085,10 +5097,7 @@ h1 {
           margin-bottom: 0; }
     .popup {
       width: 95%;
-      padding: 50px 20px;
-      top: 50px;
-      -webkit-transform: translate(-50%, 0);
-              transform: translate(-50%, 0); }
+      padding: 50px 20px; }
       .popup__close {
         -webkit-filter: brightness(100%) invert(0);
                 filter: brightness(100%) invert(0);
