--- a/static/pug/blocks/products/products.pug
+++ b/static/pug/blocks/products/products.pug
@@ -19,7 +19,8 @@ mixin products
 							span Системы энергосбережения и стабилизации электрического тока
 						img(src="./img/icatalog-icon1.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 
 					li.products__item
 						a(href="#").products__link
@@ -27,7 +28,8 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 
 					li.products__item
 						a(href="#").products__link
@@ -35,7 +37,8 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 					
 					li.products__item
 						a(href="#").products__link
@@ -43,7 +46,8 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 					
 					li.products__item
 						a(href="#").products__link
@@ -51,7 +55,8 @@ mixin products
 							span Системы энергосбережения и стабилизации электрического тока
 						img(src="./img/icatalog-icon1.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 
 					li.products__item
 						a(href="#").products__link
@@ -59,7 +64,8 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 
 					li.products__item
 						a(href="#").products__link
@@ -67,7 +73,8 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
 					
 					li.products__item
 						a(href="#").products__link
@@ -75,4 +82,5 @@ mixin products
 							span Системы оперативного постоянного тока 
 						img(src="./img/icatalog-icon2.png", alt="").products__icon
 						span.products__bg
-						img(src="./img/products-image.jpg", alt="").products__hover-img
+						.products__over-img
+							img(src="./img/products-image.jpg", alt="").products__hover-img
