--- a/static/sass/blocks/products/products.sass
+++ b/static/sass/blocks/products/products.sass
@@ -21,7 +21,6 @@
 		align-items: flex-start
 		margin-bottom: 36px
 		z-index: 2
-		overflow: hidden
 
 		@include desktop
 			padding: 37px 47px
@@ -39,33 +38,26 @@
 			@include mob
 				margin-right: 0
 
-		&:nth-child(even)
+		&:nth-child(odd)
+			.products__over-img
+				right: 0
+				left: auto
+			
 			.products__hover-img
-				right: auto
-				left: 0
-
-			.products__bg
-				&:before
-					right: auto
-					left: 0
+				position: absolute
+				bottom: 0
+				left: auto
+				right: 0
 
 		&:hover
-			overflow: visible
 			.products__name
 				span
 					border-color: $t
-			
 			.products__bg
-				opacity: 1
-				&:before
-					width: 100%
-					height: 100%
-
-			.products__hover-img
+				background-color: $main-blue
+			.products__over-img
 				width: calc(100% + 250px)
 				height: calc(100% + 184px)
-				// transition: .8s width, .8s height
-				opacity: 1
 
 				@media only screen and (max-width: 1340px)
 					width: calc(100% + 200px)
@@ -103,14 +95,19 @@
 	&__hover-img
 		position: absolute
 		bottom: 0
-		right: 0
+		left: 0
+	
+	&__over-img
+		position: absolute
+		left: 0
+		bottom: 0
 		width: 100%
 		height: 100%
-		z-index: -2
-		opacity: 0
-		// transition: .3s width, .3s height
-		object-fit: cover
-		font-family: 'object-fit: cover;'
+		overflow: hidden
+		z-index: -3
+		background-color: transparent
+		transition: .5s width, .5s height
+		will-change: width, height
 
 	&__bg
 		background-color: $darker-blue
@@ -121,14 +118,4 @@
 		left: 0
 		top: 0
 		z-index: -1
-		opacity: 0
-
-		&:before
-			content: ''
-			position: absolute
-			bottom: 0
-			right: 0
-			width: calc(100% + 250px)
-			height: calc(100% + 184px)
-			background-color: $main-blue
-			transition: 1s width, 1s height
+		transition: .5s background-color
