--- a/static/sass/blocks/index/iabout.sass
+++ b/static/sass/blocks/index/iabout.sass
@@ -6,20 +6,25 @@
 
 	&__video
 		width: 100%
+		height: 42vw
 		position: relative
 		margin-bottom: 70px
 		overflow: hidden
 
 		@include desktop
 			margin-bottom: 63px
-		
-		@media only screen and (max-width: 520px)
-			display: none
+
+		@include mob
+			height: 200px
 
 		video
 			width: 100%
 			object-fit: cover
 			font-family: 'object-fit: cover;'
+
+		iframe
+			width: 100%
+			height: 100%
 
 	&__video-btn
 		position: absolute
